Fix issues with overflowing at 768 for expertise card

--- a/src/app/css/expertise.scss
+++ b/src/app/css/expertise.scss
@@ -1,13 +1,23 @@
 @tailwind components;
+
+
+:root {
+  --text-primary-rgb: 0, 123, 255;
+  --text-secondary-rgb: 255, 165, 0;
+}
+
 /*-_-_-_-_-_-_-_-_-_-_-_-_-_-_ Expertise Card -_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_*/
+.cardTransition{
+  @apply flex justify-start items-start space-x-4;
+}
 .cardEnv {
-  @apply flex flex-col items-center justify-start space-y-4 w-full h-full overflow-x-hidden;
-  scrollbar-width: none;
+  @apply flex flex-col items-center justify-start  w-full h-full overflow-x-hidden;
 }
 
 
 .cardExpertise {
-  @apply z-20 ;
+  @apply z-20 overflow-visible;
+  box-sizing: border-box ;
 
   :hover .cardTitle {
     color: transparent;
@@ -73,6 +83,10 @@
   width: 2px;
 }
 
+.technologyEnv{
+  @apply flex flex-col items-start justify-start;
+}
+
 .technologyTitle {
   @apply mt-5 mb-5;
   font-size: min(2vw, 20px);
@@ -82,37 +96,75 @@
   @apply relative ml-2 overflow-auto ;
 }
 
+/*-_-_-_-_-_-_-_-_-_-_-_-_-_-_ Blur Logo -_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_*/
+.blurLogo {
+  @apply absolute opacity-5 z-0;
+}
+
+.break-line {
+  height: 1px;
+  width: 100%;
+  background-image: linear-gradient(to right,
+          rgba(var(--text-secondary-rgb), 0.2), /* Start with 20% opacity */
+          rgba(var(--text-secondary-rgb), 1) 25%, /* Transition to 100% opacity */
+          rgba(var(--text-secondary-rgb), 1) 75%, /* Keep 100% opacity to the middle */
+          rgba(var(--text-secondary-rgb), 0.2)); /* End with 20% opacity */
+}
+
+
 @layer components {
   @media (max-width: 640px) {
-    .technologyIcons{
+    .technologyEnv{
+      @apply mb-8
+    }
+    .technologyIcons {
       @apply w-3 h-3;
     }
   }
   @media (max-width: 768px) {
-    .cardExpertise{
-      @apply pl-8 pr-8 pb-8 w-full;
+    .cardTransition {
+      @apply flex flex-col;
     }
-    .technologyIcons{
-      @apply w-8 h-8;
+    .cardExpertise {
+      @apply pl-5 pr-8 pb-8 w-full h-full;
+    }
+    .technologyEnv{
+      @apply mb-5
+    }
+    .technologyIcons {
+      @apply w-8 h-8 mb-0;
+    }
+    .break-line {
+      @apply opacity-0;
+      opacity: 100 !important;;
+    }
+    .blurLogo{
+      margin-bottom: 50%;
+      height: calc(100% / 1.3);
+      width: calc(100% / 1.3);
     }
   }
   @media (max-width: 1024px) {
     .cardEnv {
       @apply p-12  ;
     }
-    .cardTransition{
+    .cardTransition {
       @apply w-full h-full;
     }
-    .technologyIcons{
-      @apply w-9 h-9;
+    .technologyIcons {
+      @apply w-9 h-9 mb-5;
+    }
+    .break-line {
+      @apply opacity-0;
+      opacity: 0;
     }
   }
   @media (max-width: 1280px) {
     .cardEnv {
       @apply p-16;
     }
-    .technologyIcons{
-      @apply w-10 h-10;
+    .technologyIcons {
+      @apply w-10 h-10 mb-5;
     }
   }
   @media (min-width: 1281px) {
@@ -120,7 +172,7 @@
       @apply p-20;
       max-width: 1600px;
     }
-    .technologyIcons{
+    .technologyIcons {
       @apply w-10 h-10;
     }
   }
